k8s/0-zipkin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: zipkin
  name: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zipkin
  template:
    metadata:
      annotations:
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: zipkin
    spec:
      containers:
        - image: openzipkin/zipkin
          name: zipkin
          ports:
            - containerPort: 9411
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: zipkin
  name: zipkin
spec:
  ports:
    - name: "9411"
      port: 9411
      targetPort: 9411
  selector:
    io.kompose.service: zipkin
