k8s/1-configserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: configserver
  name: configserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: configserver
  template:
    metadata:
      annotations:
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: configserver
    spec:
      containers:
        - image: doctorhoai/datn_config:z2
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "400m"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8071
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8071
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
          name: configserver
          ports:
            - containerPort: 8071
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: configserver
  name: configserver
spec:
  ports:
    - name: "8071"
      port: 8071
      targetPort: 8071
  selector:
    io.kompose.service: configserver
