k8s/1-eurekaservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: eurekaservice
  name: eurekaservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eurekaservice
  template:
    metadata:
      annotations:
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: eurekaservice
    spec:
      containers:
        - image: doctorhoai/datn_eureka:k15
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8070
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8070
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
          name: eurekaservice
          ports:
            - containerPort: 8070
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: eurekaservice
  name: eurekaservice
spec:
  ports:
    - name: "8070"
      port: 8070
      targetPort: 8070
  selector:
    io.kompose.service: eurekaservice
