k8s/1-identity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: identity
  name: identity
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: identity
  template:
    metadata:
      annotations:
        kompose.version: 1.35.0 (9532ceef3)
        prometheus.io/scrape: "true"                 # ✅ bật scrape
        prometheus.io/path: "/actuator/prometheus"   # ✅ đường metrics Spring Boot
        prometheus.io/port: "8080"                   # ✅ cổng container
      labels:
        io.kompose.service: identity
    spec:
      containers:
        - env:
            - name: EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE
              value: http://eurekaservice:8070/eureka/
            - name: SPRING_CONFIG_IMPORT
              value: configserver:http://configserver:8071
            - name: SPRING_ZIPKIN_BASE_URL
              value: http://zipkin:9411/api/v2/spans
            - name: SPRING_REDIS_HOST
              value: redis
            - name: SPRING_REDIS_PORT
              value: "6379"
          image: doctorhoai/datn_identity:k15
          resources:
            requests:
              memory: 512Mi
              cpu: 200m
            limits:
              memory: 1024Mi
              cpu: 1000m
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
          name: identity
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.35.0 (9532ceef3)
    prometheus.io/scrape: "true"                 # ✅ bật scrape
    prometheus.io/path: "/actuator/prometheus"   # ✅ đường metrics Spring Boot
    prometheus.io/port: "8080"                   # ✅ cổng container
  labels:
    io.kompose.service: identity
  name: identity
spec:
  type: LoadBalancer
  ports:
      - name: "http"
        port: 8080
        targetPort: 8080
        nodePort: 30080
  selector:
    io.kompose.service: identity
