k8s/2-manage-account.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: manage-account
  name: manage-account
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: manage-account
  template:
    metadata:
      annotations:
        kompose.version: 1.35.0 (9532ceef3)
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "9002"
      labels:
        io.kompose.service: manage-account
    spec:
      containers:
        - env:
            - name: EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE
              value: http://eurekaservice:8070/eureka/
            - name: SPRING_CONFIG_IMPORT
              value: configserver:http://configserver:8071
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:6543/postgres?prepareThreshold=0&sslmode=require
            - name: SPRING_DATASOURCE_USERNAME
              value: postgres.kcakflildljdmjlotppb
            - name: SPRING_REDIS_HOST
              value: redis
            - name: SPRING_REDIS_PORT
              value: "6379"
            - name: SPRING_ZIPKIN_BASE_URL
              value: http://zipkin:9411/api/v2/spans
          image: doctorhoai/datn_manage_account:z3
          resources:
            requests:
              cpu: "300m"
              memory: "768Mi"
            limits:
              cpu: "600m"
              memory: "1229Mi"
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9002
            failureThreshold: 60
            periodSeconds: 5
            timeoutSeconds: 5

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9002
            initialDelaySeconds: 0
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 5

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9002
            initialDelaySeconds: 0
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 5
          name: manage-account
          ports:
            - containerPort: 9002
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.35.0 (9532ceef3)
    prometheus.io/scrape: "true"
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "9002"
  labels:
    io.kompose.service: manage-account
  name: manage-account
spec:
  ports:
    - name: "9002"
      port: 9002
      targetPort: 9002
  selector:
    io.kompose.service: manage-account
