k8s/2-manage-medical.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: manage-medical
  name: manage-medical
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: manage-medical
  template:
    metadata:
      annotations:
        kompose.version: 1.35.0 (9532ceef3)
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "9003"
      labels:
        io.kompose.service: manage-medical
    spec:
      containers:
        - env:
            - name: EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE
              value: http://eurekaservice:8070/eureka/
            - name: SPRING_CONFIG_IMPORT
              value: configserver:http://configserver:8071
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:6543/postgres?prepareThreshold=0&sslmode=require
            - name: SPRING_DATASOURCE_USERNAME
              value: postgres.kcakflildljdmjlotppb
            - name: SPRING_REDIS_HOST
              value: redis
            - name: SPRING_REDIS_PORT
              value: "6379"
            - name: SPRING_ZIPKIN_BASE_URL
              value: http://zipkin:9411/api/v2/spans
          image: doctorhoai/datn_manage_medical:z2
          resources:
            requests:
              cpu: "300m"
              memory: "768Mi"
            limits:
              cpu: "600m"
              memory: "1229Mi"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9003
            initialDelaySeconds: 150
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9003
            initialDelaySeconds: 150
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 5
          name: manage-medical
          ports:
            - containerPort: 9003
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.35.0 (9532ceef3)
    prometheus.io/scrape: "true"                 # ✅ bật scrape
    prometheus.io/path: "/actuator/prometheus"   # ✅ đường metrics Spring Boot
    prometheus.io/port: "9003"                   # ✅ cổng container
  labels:
    io.kompose.service: manage-medical
  name: manage-medical
spec:
  ports:
    - name: "9003"
      port: 9003
      targetPort: 9003
  selector:
    io.kompose.service: manage-medical
