k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medicalhoai-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"

    # Bật forward X-Forwarded-For
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"

    # Cho phép lấy IP thật
    nginx.ingress.kubernetes.io/enable-real-ip: "true"
    nginx.ingress.kubernetes.io/proxy-real-ip-cidr: "0.0.0.0/0"

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identity
                port:
                  number: 8080
